--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -6,13 +6,16 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<MatButton Icon="face" 
+    OnClick="@IncrementCount" 
+    Label="Simple Button"></MatButton>
 
 @code {
     private int currentCount = 0;
 
     private void IncrementCount()
     {
-        currentCount++;
+        Random rand = new Random(DateTime.Now.Millisecond);
+        currentCount = rand.Next();
     }
 }
