--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace ProjetoFront.Pages
+@namespace FrontExample.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
