--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace ProjetoFront.Pages
+@namespace FrontExample.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="ProjetoFront.styles.css" rel="stylesheet" />
+    <link href="FrontExample.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -27,8 +27,51 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.server.js"></script>
+    <script lang="js">
+        window.getUser = function()
+        {
+            let cpfField = document.getElementById('cpf-field')
+            let cepField = document.getElementById('cep-field')
+            let passField = document.getElementById('pass-field')
+            let emailField = document.getElementById('email-field')
+
+            return {
+                cpf: cpfField.value,
+                cep: cepField.value,
+                pass: passField.value,
+                email: emailField.value
+            }
+        }
+
+        window.passValidation = function()
+        {
+            let passField = document.getElementById('pass-field')
+            let repeatPassField = document.getElementById('repeat-pass-field')
+
+            let pass = passField.value
+            let repeatPass = repeatPassField.value
+
+            if (repeatPass == "")
+                return true
+
+            return pass == repeatPass
+        }
+
+        window.getCpf = function()
+        {
+            let field = document.getElementById('cpf-field')
+            return field.value;
+        }
+
+        window.getCep = function()
+        {
+            let field = document.getElementById('cep-field')
+            return field.value;
+        }
+    </script>
+
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
