--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ProjetoFront
-@using ProjetoFront.Shared
+@using FrontExample
+@using FrontExample.Shared
 @using MatBlazor
